--- a/src/styles/components/home/socialReels.css
+++ b/src/styles/components/home/socialReels.css
@@ -1,9 +1,17 @@
+.social_header {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 10rem;
+}
 .socialCard_section {
-    margin: 4rem 0rem;
+  margin: 4rem 0rem;
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
-    width: 100%;
+  width: 100%;
 }
 
 .socialCard_box {
@@ -16,7 +24,7 @@
   align-items: center;
   text-align: center;
   color: white;
-  padding: 2rem; /* 32px */
+  padding: 3rem 0rem; 
   overflow: hidden;
 }
 
@@ -36,3 +44,6 @@
   filter: brightness(75%);
 }
 
+.socialCard_description{
+  width: 80%;
+}
