--- a/src/styles/components/common/footer.css
+++ b/src/styles/components/common/footer.css
@@ -1,4 +1,5 @@
 .footer_classname_wrapper {
+  margin-top: 5rem;
   width: 100%;
   background-color: #174d38;
   color: white;
@@ -37,10 +38,6 @@
 
 
 
-.footer_classname_featureDesc {
-  opacity: 0.8;
-}
-
 /* ========== Links Grid Section ========== */
 .footer_classname_linksGrid {
   width: 100%;
@@ -50,33 +47,27 @@
 }
 
 .footer_classname_about {
-  width: 50%;
-  opacity: 0.9;
-}
-
-.footer_classname_column {
-  text-transform: uppercase;
+  width: 60%;
 }
 
 .footer_classname_heading {
   margin-bottom: 0.5rem;
 }
 
-.footer_classname_column ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.footer_links_column {
+  margin-top: 1rem;
 }
 
-.footer_classname_column li {
-  margin: 0.4rem 0;
+.footer_links_column h3 {
+  margin: 0.5rem 0;
   cursor: pointer;
   transition: opacity 0.3s ease;
 }
 
-.footer_classname_column li:hover {
+.footer_classname_column h3:hover {
   opacity: 0.7;
 }
+
 
 /* ========== Bottom Section ========== */
 .footer_classname_bottom {
@@ -88,9 +79,9 @@
   gap: 2rem;
 }
 .footer_logo{
-    width: 25vw;
+    width: 28vw;
 }
 
-.footer_classname_bottom p {
+.footer_classname_bottom p ,.copyright_txt {
   opacity: 0.8;
 }
