--- a/src/styles/components/home/featuredCollection.css
+++ b/src/styles/components/home/featuredCollection.css
@@ -1,6 +1,6 @@
 .featured_collections_section {
   width: 100%;
-  margin-top: 8rem;
+  margin-top: 10rem;
 }
 
 .featured_header {
@@ -8,7 +8,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  gap: .5rem; 
+  gap: 1rem; 
 }
 
 .featured_scroll {
@@ -23,36 +23,7 @@
   display: none; /* Chrome/Safari */
 }
 
-.featured_card {
-  width: 20vw;
+.featured_shopcard{
+  width: 22vw;
   flex-shrink: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.5);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-  border-left: 1px solid rgba(0, 0, 0, 0.5);
-}
-.featured_card:last-child {
-  border-right: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.featured_img_wrapper {
-  width: 100%;
-  aspect-ratio: 5 / 6;
-}
-
-.featured_img_wrapper img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.featured_card_info {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: 0.75rem; /* 12px */
-  justify-content: space-between;
-}
-
-.featured_item_price {
-  opacity: 0.7;
 }
