--- a/src/styles/components/home/hero.css
+++ b/src/styles/components/home/hero.css
@@ -2,7 +2,7 @@
     background-color: #174D38;
     height: 2.25rem;
 }
-.info_header p{
+.info_header h3{
     color: white;
     cursor: pointer;
     text-transform: uppercase;
@@ -16,14 +16,17 @@
     position: relative;
     width: 100%;
     height: calc(100vh - 2.25rem);
-    background-image: url(../../../../public/images/homepage/heroBg.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
-
+.home_hero video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    filter: brightness(.8);
+}
 .home_hero_inner{
     position: absolute;
+    white-space: nowrap;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,7 +37,7 @@
 }
 .green_button{
     margin-top: 2rem;
-    padding: .75rem 6rem;
+    padding: .25rem 5rem;
     background-color: #174D38;
     color: white;
 }
