--- a/src/styles/components/home/hero.css
+++ b/src/styles/components/home/hero.css
@@ -1,4 +1,7 @@
 .info_header {
+    position: absolute;
+    top: 0;
+    width: 100%;
     background-color: #174D38;
     height: 2.25rem;
 }
@@ -10,10 +13,14 @@
 .info_header p:hover{
     text-decoration: underline;
 }
-
+.dummy_hero_div{
+    height: calc(100vh - 2.25rem);
+    pointer-events: none;
+}
 .home_hero{
     color: white;
-    position: relative;
+    position: absolute;
+    top: 2.25rem;
     width: 100%;
     height: calc(100vh - 2.25rem);
 }
@@ -22,7 +29,6 @@
     top: 0;
     left: 0;
     z-index: -1;
-    filter: brightness(.8);
 }
 .home_hero_inner{
     position: absolute;
@@ -37,7 +43,7 @@
 }
 .green_button{
     margin-top: 2rem;
-    padding: .25rem 5rem;
+    padding: .75rem 5rem;
     background-color: #174D38;
     color: white;
 }
