--- a/src/styles/components/common/footer.css
+++ b/src/styles/components/common/footer.css
@@ -13,41 +13,37 @@
 /* ========== Features Section ========== */
 .footer_classname_features {
   width: 100%;
+  position: relative;
+  z-index: 9;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 5rem;
   background: white;
   color: black;
-  padding: 2rem 0;
+  padding: 3rem 0;
+  border-radius: .25rem;
 }
 
 .footer_classname_featureCard {
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   justify-content: center;
-  padding: 2.5rem;
-  gap: 1.25rem;
+  padding: 0 1.5rem;
+  gap: 1rem;
 }
-
-.footer_classname_featureCard img {
-  width: 2rem;
-  height: 2rem;
-  margin: 0 auto;
-}
-
-
 
 /* ========== Links Grid Section ========== */
 .footer_classname_linksGrid {
+  margin: 5rem 0;
   width: 100%;
-  margin: 6rem 0;
   display: grid;
-  grid-template-columns: 32% 17% 17% 17% 17%;
+  grid-template-columns: 39% 15.25% 15.25% 15.25% 15.25%;
 }
 
 .footer_classname_about {
-  width: 60%;
+  width: 50%;
 }
 
 .footer_classname_heading {
@@ -63,9 +59,11 @@
   cursor: pointer;
   transition: opacity 0.3s ease;
 }
-
+.footer_classname_column{
+  padding-left: 5.5rem;
+}
 .footer_classname_column h3:hover {
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 
@@ -76,7 +74,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 .footer_logo{
     width: 28vw;
