--- a/src/styles/components/common/header.css
+++ b/src/styles/components/common/header.css
@@ -1,7 +1,22 @@
-.header {
+.dummy_paren {
+  height: 2.25rem;
+  pointer-events: none;
+  width: 100%;
+}
+.header_bg {
   position: fixed;
-  top: 2.25rem;
-  height: 6rem;
+  top: -4.1rem;
+  transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+  left: 0;
+  z-index: -1;
+  background-color: white;
+  width: 100%;
+  height: 4rem;
+}
+.header {
+  position: sticky;
+  top: 0;
+  height: 4rem;
   z-index: 99;
   left: 0;
   width: 100vw;
@@ -9,29 +24,51 @@
   align-items: center;
   justify-content: space-between;
 }
-.logo_paren{
+.logo_paren {
   width: 25%;
 }
-.header_logo{
-  transform: translateY(.2rem);
+.header_logo {
+  transform: translateY(0.2rem);
   mix-blend-mode: difference;
-  width: 18vw;
+  width: 14vw;
 }
 .nav_links {
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  mix-blend-mode: difference;
   gap: 2rem;
 }
-.nav_links p {
+.nav_links h3 {
   color: white;
   cursor: pointer;
   text-transform: uppercase;
 }
-.nav_links p:hover {
-  text-decoration: underline;
+
+.hover_text{
+  position: relative;
+  width: fit-content;
+  cursor: pointer;
+
 }
+.hover_text::after{
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: .1rem;
+  border-radius: 20rem;
+  left: 0;
+  width: 0;
+  height: .1rem;
+  mix-blend-mode: difference;
+  background-color: #ffffff;
+  transition: width 0.3s ease;
+}
+.hover_text:hover::after{
+  width: 100%;
+}
+
 .short_links {
   width: 25%;
   display: flex;
@@ -39,7 +76,7 @@
   align-items: center;
   gap: 1.5rem;
 }
-.short_links_icon{
-  width: 1.5rem;
+.short_links_icon {
+  width: 1.22rem;
   mix-blend-mode: difference;
 }
