--- a/src/styles/components/home/category.css
+++ b/src/styles/components/home/category.css
@@ -18,9 +18,18 @@
   width: 100%;
   aspect-ratio: 1/1;
   margin-bottom: 1rem;
+  overflow: hidden;
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0s
+}
+.category_box_img_paren:hover{
+  border-radius: .25rem;
+}
+.category_box_img_paren:hover .category_box_img{
+  scale: 1.05;
 }
 .category_box_img_paren img {
   width: 100%;
   height: 100%;
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0s;
   object-fit: cover;
 }
