--- a/src/styles/components/home/lookBook.css
+++ b/src/styles/components/home/lookBook.css
@@ -26,7 +26,7 @@
 .lookbook_button {
   width: fit-content;
   padding: 0.75rem 4rem;
-  background-color: #2F3720;
+  background-color: #2f3720;
   color: white;
 }
 
@@ -54,7 +54,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   width: 100%;
   text-align: center;
 }
@@ -62,12 +62,12 @@
   width: fit-content;
   opacity: 0.8;
 }
-.lookbookCard_link:hover{
+.lookbookCard_link:hover {
   text-decoration: underline;
 }
 
 .lookbookSlider_section {
-    margin: 8rem 0rem;
+  margin: 8rem 0rem;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -97,15 +97,17 @@
 .lookbookSlider_card_wrapper {
   width: 100%;
   display: flex;
+  gap: 10rem;
   justify-content: center;
 }
 
 .lookbookSlider_card {
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 2rem; /* 20px */
+  gap: 1rem; /* 20px */
   width: 20vw;
 }
 
@@ -131,4 +133,16 @@
 
 .lookbookSlider_card_button:hover {
   background-color: #333;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  width: 20vw !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
