--- a/src/styles/components/home/socialReels.css
+++ b/src/styles/components/home/socialReels.css
@@ -7,7 +7,7 @@
   margin-top: 10rem;
 }
 .socialCard_section {
-  margin: 4rem 0rem;
+  margin: 3rem 0rem;
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
@@ -26,6 +26,18 @@
   color: white;
   padding: 3rem 0rem; 
   overflow: hidden;
+}
+.socialCard_box_vid{
+  position: absolute; 
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+
+}
+
+.socialCard_box:hover .socialCard_box_vid{
+  opacity: 1;
 }
 
 .socialCard_image_wrapper {
@@ -46,4 +58,8 @@
 
 .socialCard_description{
   width: 80%;
+}
+.socialCard_title{
+  line-height: 2rem !important;
+
 }
