--- a/src/styles/components/products/productDetail.css
+++ b/src/styles/components/products/productDetail.css
@@ -5,6 +5,7 @@
 }
 
 .productDetail_left {
+  padding-right: .5rem;
   width: 50%;
 }
 
@@ -24,8 +25,9 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 6rem;
+  justify-content: center;
+  gap: 4rem;
+  padding:0 11rem
 }
 
 .productDetail_title {
@@ -38,7 +40,7 @@
 
 .productDetail_row {
   display: flex;
-  gap: 1.25rem; 
+  gap: .25rem; 
   width: 100%;
 }
 
@@ -70,9 +72,9 @@
 
 .productDetail_quantity {
   width: 100%;
-  margin-top: 1.25rem; 
+  margin-top: .25rem; 
   border: 1px solid #000;
-  padding: 0rem 1.25rem;
+  padding: 1.25rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -84,7 +86,7 @@
 
 .productDetail_addtocart {
   width: 100%;
-  margin-bottom: 1.25rem;
+  margin-bottom: 1.5rem;
   display: flex;
   align-items: center;
 }
@@ -94,13 +96,16 @@
   background-color: #174D38;
   color: white;
   text-align: center;
-  padding: 1.25rem;
+  padding: 1.5rem;
+}
+.productDetail_btn h2{
+  transform: translateY(.1rem);
 }
 .productDetail_btn_icon{
   width: 10%;
 }
 .productDetail_btn_icon img{
-  width: 2.5rem;
+  width: 1.75rem;
 }
 .productDetail_links {
   display: flex;
@@ -123,7 +128,7 @@
   top: 50%;
   transform: translateY(-50%);
   overflow: hidden;
-  height: calc(100vh - 5rem);
+  height: calc(100vh);
   width: 1px;
   background-color: #e5e5e5;
 }
@@ -136,7 +141,7 @@
 
 
 .suggestion_parent{
-  margin-top: 10rem;
+  margin-top: 5rem;
 }
 .suggestion_parent_header{
   width: 100%;
@@ -144,11 +149,11 @@
 }
 
 .image_banner_paren{
-  margin: 8rem 0rem;
+  margin: 5rem 0rem;
   background-color: #174D38;
   color:white;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   display: flex;
 }
 .image_banner_paren_left{
