--- a/src/styles/components/products/products.css
+++ b/src/styles/components/products/products.css
@@ -1,19 +1,19 @@
 .products_hero-section {
   width: 100%;
-  height: 100vh;
+  height: 75vh;
   color: white;
   display: flex;
   align-items: flex-end;
   padding: 4rem 0rem;
   position: relative;
-  background-color: #174D38;
+  background-color: #174d38;
 }
-.products_hero-img{
-    width: 22rem;
+.products_hero-img {
+  width: 15rem;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   z-index: 1;
 }
 .products_content h2 {
@@ -24,20 +24,19 @@
   width: 35%;
 }
 
-
-.products_header{
+.products_header {
   width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-top: 10rem;
+  margin-top: 4rem;
 }
 
-.allproducts_paren{
+.allproducts_paren {
   flex-shrink: 0;
   width: 100%;
   display: grid;
-  margin-top: 5rem;
-  grid-template-columns: repeat(4,1fr);
+  margin-top: 3rem;
+  grid-template-columns: repeat(4, 1fr);
 }
