--- a/src/styles/fontSetting.css
+++ b/src/styles/fontSetting.css
@@ -46,6 +46,7 @@ button {
 }
 h2 {
   font-weight: 100;
+  letter-spacing: .1rem;
   font-family: safira;
 }
 h3 {
@@ -89,7 +90,7 @@ h3 {
 
 .text-3xl {
   font-size: 1.875rem; /* 30px */
-  line-height: 2.25rem; /* 36px */
+  line-height: 3.5rem; /* 36px */
 }
 
 .text-4xl {
