--- a/src/styles/components/products/productDetail.css
+++ b/src/styles/components/products/productDetail.css
@@ -5,7 +5,7 @@
 }
 
 .productDetail_left {
-  padding-right: .5rem;
+  /* padding-right: .05rem; */
   width: 50%;
 }
 
@@ -51,7 +51,7 @@
 
 .productDetail_select button {
   width: 100%;
-  padding: 1.25rem;
+  padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -61,8 +61,8 @@
 }
 
 .productDetail_select--green button {
-  background-color: #174D38;
-  color: white !important;
+  /* background-color: #174D38; */
+  /* color: white !important; */
 }
 
 .productDetail_select--white button {
@@ -74,7 +74,7 @@
   width: 100%;
   margin-top: .25rem; 
   border: 1px solid #000;
-  padding: 1.25rem;
+  padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -86,7 +86,6 @@
 
 .productDetail_addtocart {
   width: 100%;
-  margin-bottom: 1.5rem;
   display: flex;
   align-items: center;
 }
@@ -96,7 +95,7 @@
   background-color: #174D38;
   color: white;
   text-align: center;
-  padding: 1.5rem;
+  padding: 1.25rem;
 }
 .productDetail_btn h2{
   transform: translateY(.1rem);
@@ -108,6 +107,7 @@
   width: 1.75rem;
 }
 .productDetail_links {
+  margin-top: 2.5rem;
   display: flex;
   justify-content: center;
   gap: 2rem; 
