--- a/src/styles/components/home/featuredCollection.css
+++ b/src/styles/components/home/featuredCollection.css
@@ -14,16 +14,34 @@
 .featured_scroll {
   padding: 0rem 2rem;
   margin-top: 2.5rem; 
+}
+.mySwiper{
   display: flex;
-  overflow-x: auto;
-  scrollbar-width: none; 
+  width: 100%;
+  overflow: hidden;
 }
 
 .featured_scroll::-webkit-scrollbar {
   display: none; /* Chrome/Safari */
 }
 
-.featured_shopcard{
-  width: 22vw;
+.featured_shopcard {
+  width: 20rem !important;
   flex-shrink: 0;
+}
+.swiper-button-next,
+.swiper-button-prev {
+  color: black !important;
+  padding: .8rem ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10rem;
+  background-color: rgb(255, 255, 255);
+  transition: opacity 0.3s;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  opacity: 0.7;
 }
