--- a/src/styles/components/common/header.css
+++ b/src/styles/components/common/header.css
@@ -77,6 +77,10 @@
   gap: 1.5rem;
 }
 .short_links_icon { 
+  transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
   width: 1.22rem;
   mix-blend-mode: difference;
+}
+.short_links_icon:hover{
+  scale: 1.15;
 }
