--- a/src/styles/components/home/category.css
+++ b/src/styles/components/home/category.css
@@ -1,36 +1,37 @@
 .category_header {
-  margin-top: 3rem;
+  margin-top: 6rem;
   text-align: center;
 }
 
 .home_category_paren {
-  margin: 2rem 0;
+  margin: 1rem 0;
   width: 100%;
   display: flex;
   align-items: center;
+  overflow: scroll;
   justify-content: center;
 }
-.home_category_inner{
-  width: 80%;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1.5rem;
+.home_category_inner {
+  width: 100%;
+  display: flex;
+  /* grid-template-columns: repeat(5, 1fr); */
+  gap: 0.5rem;
 }
 .category_box {
-  width: 100%;
+  width: 35vw;
   text-align: center;
 }
 .category_box_img_paren {
   width: 100%;
   aspect-ratio: 1/1;
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
   overflow: hidden;
-  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0s
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0s;
 }
-.category_box_img_paren:hover{
-  border-radius: .25rem;
+.category_box_img_paren:hover {
+  border-radius: 0.25rem;
 }
-.category_box_img_paren:hover .category_box_img{
+.category_box_img_paren:hover .category_box_img {
   scale: 1.05;
 }
 .category_box_img_paren img {
@@ -38,4 +39,49 @@
   height: 100%;
   transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0s;
   object-fit: cover;
+}
+
+@media (min-width: 750px) {
+  .category_header {
+    margin-top: 4rem;
+  }
+
+  .home_category_paren {
+    overflow: hidden;
+    margin: 2rem 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .home_category_inner {
+    overflow: hidden;
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 1.5rem;
+  }
+  .category_box {
+    width: 100%;
+    text-align: center;
+  }
+  .category_box_img_paren {
+    width: 100%;
+    aspect-ratio: 1/1;
+    margin-bottom: 1rem;
+    overflow: hidden;
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+  }
+  .category_box_img_paren:hover {
+    border-radius: 0.25rem;
+  }
+  .category_box_img_paren:hover .category_box_img {
+    scale: 1.05;
+  }
+  .category_box_img_paren img {
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+    object-fit: cover;
+  }
 }
