--- a/src/styles/components/home/socialReels.css
+++ b/src/styles/components/home/socialReels.css
@@ -4,19 +4,20 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-top: 10rem;
+  margin-top: 6rem;
 }
 .socialCard_section {
   margin: 3rem 0rem;
-  display: grid;
+  display: flex;
+  overflow: scroll;
   gap: 1rem;
-  grid-template-columns: repeat(4, 1fr);
   width: 100%;
 }
 
 .socialCard_box {
+  flex-shrink: 0;
   position: relative;
-  width: 100%;
+  width: 70vw;
   aspect-ratio: 5/8;
   display: flex;
   flex-direction: column;
@@ -24,7 +25,7 @@
   align-items: center;
   text-align: center;
   color: white;
-  padding: 3rem 0rem; 
+  padding: 3rem .5rem; 
   overflow: hidden;
 }
 .socialCard_box_vid{
@@ -62,4 +63,37 @@
 .socialCard_title{
   line-height: 2rem !important;
 
+}
+
+@media (min-width:750px) {
+  .social_header {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 8rem;
+}
+.socialCard_section {
+  overflow: hidden;
+  margin: 3rem 0rem;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+}
+.socialCard_box {
+  flex-shrink: 0;
+  position: relative;
+  width: 100%;
+  aspect-ratio: 5/8;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  color: white;
+  padding: 3rem 0rem; 
+  overflow: hidden;
+}
 }
