--- a/src/styles/components/products/productDetail.css
+++ b/src/styles/components/products/productDetail.css
@@ -1,12 +1,30 @@
 .productDetail_main {
+  margin-top: 4rem;
   width: 100%;
+  overflow: hidden;
   display: flex;
-  height: 300vh;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 .productDetail_left {
   /* padding-right: .05rem; */
-  width: 50%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.productDetail_left_upper {
+  width: 100%;
+  height: 65%;
+}
+.productDetail_left_lower {
+  overflow: hidden;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  height: 35%;
 }
 
 .productDetail_block {
@@ -15,23 +33,63 @@
 }
 
 .productDetail_right {
-  width: 50%;
+  width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .productDetail_sticky {
-  position: sticky;
-  top: 0;
-  height: 100vh;
+  padding-bottom: 2rem;
+  height: 65%;
+  display: flex;
+  gap: 3rem;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media (min-width:750px) {
+  .productDetail_main {
+  margin-top: 4rem;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+  height: calc(100vh - 5rem);
+}
+  .productDetail_left {
+  /* padding-right: .05rem; */
+  width: 70%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 4rem;
-  padding:0 11rem
+  gap: 1rem;
 }
+  .productDetail_right {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.productDetail_sticky {
+  padding-bottom: 2rem;
+  height: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+  
+}
+
+
 
 .productDetail_title {
   margin: 0.5rem 0rem;
+}
+.productDetail_info {
+  position: relative;
 }
 
 .productDetail_options {
@@ -40,7 +98,7 @@
 
 .productDetail_row {
   display: flex;
-  gap: .25rem; 
+  gap: 1rem;
   width: 100%;
 }
 
@@ -51,7 +109,7 @@
 
 .productDetail_select button {
   width: 100%;
-  padding: 1rem;
+  padding: 0.75rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -59,22 +117,11 @@
   border: none;
   cursor: pointer;
 }
-
-.productDetail_select--green button {
-  /* background-color: #174D38; */
-  /* color: white !important; */
-}
-
-.productDetail_select--white button {
-  background-color: #ffffff;
-  color: black;
-}
-
 .productDetail_quantity {
   width: 100%;
-  margin-top: .25rem; 
+  margin-top: 1rem;
   border: 1px solid #000;
-  padding: 1rem;
+  padding: 0.75rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -85,84 +132,97 @@
 }
 
 .productDetail_addtocart {
+  position: relative;
   width: 100%;
   display: flex;
   align-items: center;
 }
-
+.productDetail_addtocart::after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.315);
+  bottom: -2rem;
+}
 .productDetail_btn {
-  width: 90%;
-  background-color: #174D38;
-  color: white;
+  border: 1px solid #000;
+  width: 85%;
   text-align: center;
-  padding: 1.25rem;
+  padding: 0.75rem;
 }
-.productDetail_btn h2{
-  transform: translateY(.1rem);
+.productDetail_btn_icon {
+  width: 15%;
 }
-.productDetail_btn_icon{
-  width: 10%;
-}
-.productDetail_btn_icon img{
+.productDetail_btn_icon img {
   width: 1.75rem;
 }
-.productDetail_links {
-  margin-top: 2.5rem;
-  display: flex;
-  justify-content: center;
-  gap: 2rem; 
+
+.product_desc_part {
+  height: 33%;
 }
 
-.productDetail_link {
-  cursor: pointer;
-  transition: text-decoration 0.3s ease;
-}
-
-.productDetail_link:hover {
-  text-decoration: underline;
-}
-
-.productDetail_line {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  overflow: hidden;
-  height: calc(100vh);
-  width: 1px;
-  background-color: #e5e5e5;
-}
-
-.productDetail_line-inner {
+.accordion_container {
   width: 100%;
-  height: 11rem; /* h-44 = 11rem */
-  background-color: #000;
+  transition: max-height 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+  max-width: 500px;
 }
 
+.accordion_item {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.315);
+}
 
-.suggestion_parent{
+.accordion_header {
+  background: none;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 1rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
+  transition: max-height 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+  cursor: pointer;
+}
+
+.accordion_content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+}
+
+.accordion_content.open {
+  max-height: 200px;
+  padding: 0.5rem 0 1rem;
+}
+
+.accordion_content p {
+  margin: 0;
+  color: #333;
+}
+
+.suggestion_parent {
   margin-top: 5rem;
 }
-.suggestion_parent_header{
+.suggestion_parent_header {
   width: 100%;
   text-align: center;
 }
 
-.image_banner_paren{
+.image_banner_paren {
   margin: 5rem 0rem;
-  background-color: #174D38;
-  color:white;
+  background-color: #174d38;
+  color: white;
   width: 100%;
-  height: 90vh;
-  display: flex;
 }
-.image_banner_paren_left{
-  width: 50%;
-  height: 100%;
+.image_banner_paren_left {
+  width: 100%;
+  height: 30vh;
 }
-.image_banner_paren_right{
-  width: 50%;
-  height: 100%;
+.image_banner_paren_right {
+  width: 100%;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -170,12 +230,40 @@
   text-align: center;
   gap: 5rem;
 }
-.image_banner_paren_right h3{
+
+@media (min-width: 750px) {
+  .image_banner_paren_left {
+    width: 50%;
+    height: 100%;
+  }
+  .image_banner_paren_right {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 5rem;
+  }
+  .image_banner_paren {
+    display: flex;
+    height: 50vh;
+    height: 70vh;
+  }
+}
+@media (min-width: 1020px) {
+  .image_banner_paren {
+    height: 90vh;
+  }
+}
+
+.image_banner_paren_right h3 {
   margin-top: 1rem;
   text-transform: capitalize;
 }
-.image_banner_paren_right button{
+.image_banner_paren_right button {
   background-color: white;
-  color: #174D38;
-  padding:.75rem 5rem;
+  color: #174d38;
+  padding: 0.75rem 5rem;
 }
