--- a/src/styles/components/products/products.css
+++ b/src/styles/components/products/products.css
@@ -1,6 +1,6 @@
 .products_hero-section {
   width: 100%;
-  height: 75vh;
+  height: 65vh;
   color: white;
   display: flex;
   align-items: flex-end;
@@ -9,7 +9,7 @@
   background-color: #174d38;
 }
 .products_hero-img {
-  width: 15rem;
+  width: 12rem;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -17,11 +17,11 @@
   z-index: 1;
 }
 .products_content h2 {
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
 }
 
 .products_content h3 {
-  width: 35%;
+  width: 100%;
 }
 
 .products_header {
@@ -38,5 +38,50 @@
   width: 100%;
   display: grid;
   margin-top: 3rem;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media (min-width: 750px) {
+  .products_hero-section {
+    width: 100%;
+    height: 75vh;
+    color: white;
+    display: flex;
+    align-items: flex-end;
+    padding: 4rem 0rem;
+    position: relative;
+    background-color: #174d38;
+  }
+  .products_hero-img {
+    width: 15rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+  .products_content h2 {
+    margin-bottom: 1rem;
+  }
+
+  .products_content h3 {
+    width: 35%;
+  }
+
+  .products_header {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 4rem;
+  }
+
+  .allproducts_paren {
+    flex-shrink: 0;
+    width: 100%;
+    display: grid;
+    margin-top: 3rem;
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
