--- a/src/styles/fontSetting.css
+++ b/src/styles/fontSetting.css
@@ -14,12 +14,12 @@
 html,
 body {
   width: 100%;
-  font-size: 3vw;
+  font-size: 2.75vw;
 }
 @media (min-width: 750px) {
   html,
   body {
-    font-size: 1.8vw;
+    font-size: 1vw;
   }
 }
 @media (min-width: 1020px) {
@@ -89,8 +89,15 @@ h3 {
 }
 
 .text-3xl {
-  font-size: 1.875rem; /* 30px */
-  line-height: 3.5rem; /* 36px */
+  font-size: 1.5rem; /* 30px */
+  line-height: 2rem; /* 36px */
+}
+@media (min-width:750px) {
+  .text-3xl {
+    font-size: 1.875rem; /* 30px */
+    line-height: 3.5rem; /* 36px */
+  }
+  
 }
 
 .text-4xl {
