--- a/src/styles/components/products/productDetail.css
+++ b/src/styles/components/products/productDetail.css
@@ -10,21 +10,106 @@
 .productDetail_left {
   /* padding-right: .05rem; */
   width: 100%;
+}
+
+/* ================================
+   📱 Mobile Image Slider
+   ================================ */
+
+.MobileImageSlider_container {
+  position: relative;
   display: flex;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+/* Thumbnails */
+.MobileImageSlider_thumbnails {
+  position: relative;
+  display: none;
+  gap: 0.5rem;
   flex-direction: column;
-  gap: 1rem;
 }
-.productDetail_left_upper {
-  width: 100%;
-  height: 65%;
+@media (min-width:768px) {
+  .MobileImageSlider_thumbnails {
+  position: relative;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
 }
-.productDetail_left_lower {
+}
+
+.MobileImageSlider_thumbnail {
+  aspect-ratio: 1/1;
+  width: 5rem;
   overflow: hidden;
+  transform-origin: bottom left;
+  transition: all 0.2s ease;
+  cursor: pointer;
+}
+
+.MobileImageSlider_thumbnail img {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-  height: 35%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.MobileImageSlider_thumbnail--active {
+  border-radius: 0.75rem;
+  filter: brightness(.7);
+}
+
+/* Swiper */
+.MobileImageSlider_swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.MobileImageSlider_slide {
+  width: 100%;
+  height: 100%;
+}
+
+.MobileImageSlider_slideImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.MobileImageSlider_swiper .swiper-button-next,
+.MobileImageSlider_swiper .swiper-button-prev {
+  display: none;
+}
+
+.MobileImageSlider_nav {
+  position: absolute;
+  bottom: 1.25rem;
+  right: 1.5rem;
+  display: flex;
+  gap: 0.75rem;
+  z-index: 10;
+}
+
+.MobileImageSlider_arrow {
+  width: 2.25rem;
+  height: 2.25rem;
+  border-radius: 100%;
+  flex-shrink: 0;
+  background-color: #fff;
+  color: #cfcfcf;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+.MobileImageSlider_arrow img {
+  width: 0.5rem;
+}
+.MobileImageSlider_arrow:hover {
+  scale: 1.1;
 }
 
 .productDetail_block {
@@ -37,59 +122,67 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 1rem;
 }
 
 .productDetail_sticky {
   padding-bottom: 2rem;
-  height: 65%;
   display: flex;
   gap: 3rem;
   flex-direction: column;
   justify-content: space-between;
 }
 
-@media (min-width:750px) {
+@media (min-width: 750px) {
   .productDetail_main {
-  margin-top: 4rem;
-  width: 100%;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  gap: 1.5rem;
-  height: calc(100vh - 5rem);
-}
+    margin-top: 5rem;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    height: calc(100vh - 6rem);
+  }
   .productDetail_left {
-  /* padding-right: .05rem; */
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
+    /* padding-right: .05rem; */
+    width: 50%;
+  }
   .productDetail_right {
-  width: 30%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .productDetail_sticky {
+    padding-bottom: 2rem;
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
-.productDetail_sticky {
-  padding-bottom: 2rem;
-  height: 65%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-  
-}
-
-
 
 .productDetail_title {
   margin: 0.5rem 0rem;
 }
 .productDetail_info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   position: relative;
+}
+.productDetail_category{
+  text-decoration: underline;
+}
+.productDetail_info_left{
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
 }
 
 .productDetail_options {
@@ -104,8 +197,9 @@
 
 .productDetail_select {
   width: 50%;
-  border: 1px solid #000;
+  border: 1px solid #a5a5a5;
 }
+
 
 .productDetail_select button {
   width: 100%;
@@ -120,11 +214,14 @@
 .productDetail_quantity {
   width: 100%;
   margin-top: 1rem;
-  border: 1px solid #000;
+  border: 1px solid #a5a5a5;
   padding: 0.75rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.productDetail_quantity_icon{
+  width: .75rem;
 }
 
 .productDetail_footer {
@@ -137,20 +234,23 @@
   display: flex;
   align-items: center;
 }
-.productDetail_addtocart::after {
+/* .productDetail_addtocart::after {
   content: "";
   position: absolute;
   height: 1px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.315);
+  background-color: #cfcfcf;
   bottom: -2rem;
-}
+} */
 .productDetail_btn {
-  border: 1px solid #000;
-  width: 85%;
+  cursor: pointer;
+  width: 100%;
   text-align: center;
   padding: 0.75rem;
+  background-color: #174d38;
+  color: white;
 }
+
 .productDetail_btn_icon {
   width: 15%;
 }
@@ -164,12 +264,13 @@
 
 .accordion_container {
   width: 100%;
-  transition: max-height 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
-  max-width: 500px;
+  height: 10rem ;
 }
 
 .accordion_item {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.315);
+  margin-bottom: 2rem;
+  padding-bottom: .5rem;
+  border-bottom: 1px solid #a5a5a5;
 }
 
 .accordion_header {
@@ -177,29 +278,40 @@
   border: none;
   outline: none;
   width: 100%;
-  padding: 1rem 0;
+  /* padding: 1rem 0; */
+  margin-bottom: .5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-align: left;
-  transition: max-height 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+  transition: max-height 0.8s cubic-bezier(0.23, 1, 0.320, 1)  ;
   cursor: pointer;
 }
 
 .accordion_content {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+  transition: max-height 0.8s cubic-bezier(0.23, 1, 0.320, 1)  ;
 }
 
 .accordion_content.open {
-  max-height: 200px;
-  padding: 0.5rem 0 1rem;
+  max-height: 10rem;
+  /* padding-bottom: 1rem; */
 }
 
-.accordion_content p {
+.accordion_content h3 {
   margin: 0;
-  color: #333;
+  /* color: #333; */
+  opacity: .7;
+}
+.productDetail_quantity_icon {
+  width: 16px;
+  height: 16px;
+  transition: transform 0.35s cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.productDetail_quantity_icon.rotated {
+  transform: rotate(180deg);
 }
 
 .suggestion_parent {
