--- a/src/styles/components/common/footer.css
+++ b/src/styles/components/common/footer.css
@@ -32,7 +32,7 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  padding: 0 1.5rem;
+  padding: 0 .5rem;
   gap: 1rem;
 }
 .footer_classname_featureCard h3 {
@@ -83,7 +83,7 @@
   gap: 1rem;
 }
 .footer_logo {
-  width: 60vw;
+  width: 40vw;
 }
 
 .footer_classname_bottom p,
@@ -175,7 +175,7 @@
     gap: 1rem;
   }
   .footer_logo {
-    width: 28vw;
+    width: 20vw;
   }
 
   .footer_classname_bottom p,
