--- a/src/styles/components/home/hero.css
+++ b/src/styles/components/home/hero.css
@@ -14,7 +14,7 @@
     text-decoration: underline;
 }
 .dummy_hero_div{
-    height: calc(80vh - 8.5rem);
+    height: 47rem;
     pointer-events: none;
 }
 .home_hero{
@@ -23,12 +23,12 @@
     position: absolute;
     top: 2.25rem;
     width: 100%;
-    height: calc(80vh - 2.25rem);
+    height: 52rem;
 }
 
 @media (min-width:750px) {
   .dummy_hero_div{
-    height: calc(75vh - 8.5rem);
+    height: 30rem;
     pointer-events: none;
 }
 .home_hero{
@@ -37,7 +37,7 @@
     position: absolute;
     top: 2.25rem;
     width: 100%;
-    height: calc(75vh - 2.25rem);
+    height: 36.3rem
 }
 }
 .home_hero video{
@@ -60,6 +60,13 @@
 .green_button{
     margin-top: 2rem;
     padding: .75rem 5rem;
+    background-color: transparent;
+    border: 1px solid #ffffff;
+    color: #ffffff;
+  transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+}
+.green_button:hover{
     background-color: #174D38;
+    border: 1px solid #174D38;
     color: white;
 }
