--- a/src/styles/fontSetting.css
+++ b/src/styles/fontSetting.css
@@ -14,7 +14,7 @@
 html,
 body {
   width: 100%;
-  font-size: 2.75vw;
+  font-size: 11px;
 }
 @media (min-width: 750px) {
   html,
@@ -41,6 +41,7 @@ input,
 li,
 button {
   font-weight: 1000;
+  letter-spacing: .1rem;
   font-family: railway-light;
   cursor: pointer;
 }
@@ -51,6 +52,7 @@ h2 {
 }
 h3 {
   font-weight: 100;
+  letter-spacing: .05rem;
   font-family: railway-regular;
 }
 .text-xxs {
