--- a/src/styles/components/home/hero.css
+++ b/src/styles/components/home/hero.css
@@ -14,7 +14,7 @@
     text-decoration: underline;
 }
 .dummy_hero_div{
-    height: 47rem;
+    height: 40rem;
     pointer-events: none;
 }
 .home_hero{
@@ -23,7 +23,7 @@
     position: absolute;
     top: 2.25rem;
     width: 100%;
-    height: 52rem;
+    height: 0;
 }
 
 @media (min-width:750px) {
@@ -37,7 +37,7 @@
     position: absolute;
     top: 2.25rem;
     width: 100%;
-    height: 36.3rem
+    height: 0
 }
 }
 .home_hero video{
