--- a/src/styles/components/products/products.css
+++ b/src/styles/components/products/products.css
@@ -1,6 +1,6 @@
 .products_hero-section {
   width: 100%;
-    height: 80vh;
+    height: 0;
   color: white;
   display: flex;
   align-items: flex-end;
@@ -17,7 +17,7 @@
   z-index: 1;
 }
 .products_content h2 {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .products_content h3 {
@@ -44,7 +44,7 @@
 @media (min-width: 750px) {
   .products_hero-section {
     width: 100%;
-    height: 75vh;
+    height: 0rem;
     color: white;
     display: flex;
     align-items: flex-end;
