--- a/src/styles/components/common/cartBag.css
+++ b/src/styles/components/common/cartBag.css
@@ -7,7 +7,7 @@
   background-color: rgba(0, 0, 0, 0.4);
   opacity: 0;
   pointer-events: none;
-  z-index: 96;
+  z-index: 999;
 }
 @media (min-width: 1020px) {
   .header_overlay {
@@ -16,109 +16,119 @@
 }
 /* Bag */
 .cartBag_openBagParent {
+  padding-right: .2rem;
   opacity: 0;
-  height: 42rem;
-  background-color: rgba(255, 255, 255, 0.7);
-  backdrop-filter: blur(0.75rem);
-  top: 6rem;
+  height: 100vh;
+  background-color: #f6f6f6;
+  top: 0rem;
   position: fixed;
   overflow: hidden;
-  width: 33rem;
+  width: 40rem;
   z-index: 9999;
   right: -38rem;
-  border-radius: 0.5rem;
 }
 .cartBag_bagHeader {
   width: 100%;
-  height: 3rem;
+  height: 6rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  background-color: #f6f6f6;
-  border-radius: 0.75rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  background-color: #ffffff;
 }
 
-.cartBag_bagHeaderLeft {
+.cartBag_bagHeaderLeft{
   display: flex;
-  align-items: center;
-  gap: 0.5rem;
+  gap: .5rem;
 }
 .cartBag_menuHeaderClose {
   cursor: pointer;
 }
-.cartBag_bagCount,
+
 .cartBag_menuHeaderClose {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.75rem;
+  height: 1.75rem;
   flex-shrink: 0;
   position: relative;
   z-index: 9;
-  background-color: #ffffff;
+  background-color: #174D38;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 9999px;
 }
-
+.close_icon{
+  transform: translateY(.05rem);
+}
+.empty_cart_box{
+  padding: 1.5rem;
+}
 .cartBag_bagScroll {
   width: 100%;
   overflow-y: scroll;
-  height: 29rem;
+  height: 72vh;
   padding-bottom: 4rem;
 }
 .cartBag_bagScroll::-webkit-scrollbar-thumb {
-  background-color: #313131;
+  background-color: #174D38;
+  cursor: pointer;
   border-radius: 100px;
 }
 .cartBag_bagScroll::-webkit-scrollbar {
-  width: 0.2rem;
+  width: .3rem;
   background-color: transparent;
 }
 
 .cartBag_bagItem {
+  flex-shrink: 0;
   width: 100%;
   height: fit-content;
-  padding: 1.25rem;
+  border-bottom: 1px solid #d4d4d4;
+  padding: 1rem 1.5rem;
 }
 
 .cartBag_bagItemInner {
   width: 100%;
+  gap: 1rem;
   height: 100%;
-  border-bottom: 2px solid #f6f6f6;
-  padding-bottom: 0.5rem;
   display: flex;
   align-items: stretch;
   justify-content: space-between;
 }
 
 .cartBag_bagImageWrapper {
+  overflow: hidden;
   width: 18%;
   aspect-ratio: 3/4;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
+.cartBag_bagImage{
+  transition: scale 0.3s ease;
+}
+.cartBag_bagImage:hover{
+  scale: 1.05;
+}
 .cartBag_bagImageWrapper img {
   object-fit: cover;
 }
 
 @media (min-width: 750px) {
   .cartBag_bagImageWrapper {
-    width: 15%;
+    width: 20%;
   }
 }
 
 .cartBag_bagImage {
   width: 100%;
   height: 100%;
-  border-radius: 0.25rem;
 }
 
 .cartBag_bagItemDetails {
-  width: 82%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -147,36 +157,77 @@
 }
 
 .cartBag_qtyControl {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  overflow: hidden;
   display: flex;
   align-items: center;
-  gap: 1rem;
+  border: 1px solid #0000006b;
   border-radius: 0.25rem;
-  background-color: #ffffff;
-  height: 1.5rem;
+  height: 2rem;
+  gap: 0.5rem;
 }
-
-.cartBag_removeButton {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.cartBag_qtyControl p{
+  position: relative;
+  z-index: 99;
+}
+.cartBag_qtyControl_dec,
+.cartBag_qtyControl_inc {
+  position: relative;
+  cursor: pointer;
+  width: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 0.25rem;
-  background-color: #ffffff;
-  height: 1.5rem;
+  height: 100%;
+}
+.cartBag_qtyControl_dec::after {
+  content: "";
+  position: absolute;
+  background-color: #174D38;
+  top: 0;
+  width: 0%;
+  left: 0;
+  height: 100%;
+  transition: width 0.3s ease; /* ANIMATION NEEDED */
+}
+.cartBag_qtyControl_inc::after {
+  content: "";
+  position: absolute;
+  background-color: #174D38;
+  top: 0;
+  width: 0%;
+  right: 0;
+  height: 100%;
+  transition: width 0.3s ease; /* ANIMATION NEEDED */
+}
+.cartBag_qtyControl_dec:hover , .cartBag_qtyControl_inc:hover {
+  color: white;
+}
+.cartBag_qtyControl_dec:hover::after, .cartBag_qtyControl_inc:hover:after {
+  width: 100%;
+}
+
+.cartBag_removeButton {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  opacity: 0.7;
+}
+.cartBag_removeButton:hover {
+  opacity: 1;
+  scale: 1.1;
+  color: #174D38;
 }
 
 .cartBag_bagFooter {
+  border-top: 1px solid rgba(0, 0, 0, 0.11);
   position: absolute;
   bottom: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  background-color: #f6f6f6;
-  padding: 1rem;
+  background-color: #ffffff;
+  padding: 1.5rem;
+  padding-bottom: 2rem;
 }
 
 .cartBag_totalRow {
@@ -200,13 +251,14 @@
 @media (max-width: 750px) {
   .cartBag_openBagParent {
     width: calc(100vw);
-    left: 0;
-    height: 0;
+    right:-100% ;
+    height: 100vh;
+    height: 100svh;
     /* height: 45rem; */
     top: 0rem;
   }
   .cartBag_bagHeader {
-    height: 3rem;
+    height: 5rem;
   }
   .cartBag_bagItem {
     padding: 1rem;
