--- a/src/styles/pages/checkout.css
+++ b/src/styles/pages/checkout.css
@@ -1,17 +1,25 @@
-.checkout_section {
+.checkout_section{
+  display: flex;
+  padding: 1rem;
+  justify-content: center;
+  width: 100%;
   padding-top: 6rem;
-  padding-bottom: 6rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-bottom: 4rem;
 }
-
-@media (min-width: 768px) {
-  .checkout_section {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
+.checkout_section_inner{
+  width: 100%;
+}
+@media (min-width:750px) {
+  .checkout_section{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-top: 10rem;
+  padding-bottom: 4rem;
+}
+  .checkout_section_inner{
+  width: 70%;
+}
 }
 
 .checkout_Wrapper {
@@ -19,6 +27,7 @@
   display: flex;
   flex-direction: column-reverse;
   margin-top: 1.25rem;
+  justify-content: center;
   gap: 1.25rem;
 }
 
@@ -38,8 +47,7 @@
 .checkout_leftContainer {
   width: 100%;
   background: #fff;
-  border-radius: 8px;
-
+  /* border-radius: 8px; */
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
@@ -49,6 +57,9 @@
   flex-direction: column;
   gap: 1rem;
   margin-bottom: 4rem;
+}
+.checkout_user_details:last-child{
+  margin-bottom: 0 !important;
 }
 .check_box_div {
   cursor: pointer;
@@ -97,7 +108,8 @@
   right: 1rem;
 }
 .checkout_inp_flex {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
 }
 
@@ -108,6 +120,7 @@
 
 /* Base select */
 .checkOut_input {
+  flex-shrink: 0;
   font-size: 1.125rem;
   width: 100%;
   padding-left: 0.5rem;
@@ -116,6 +129,11 @@
   border: 1px solid #00000050;
   outline: none;
   color: #000; /* normal text */
+  transition: all 0.1s ease;
+}
+.checkOut_input:hover{
+  padding-left: 1rem;
+  border: 2px solid #1f9468;
 }
 @media (min-height: 1020px) {
   .checkOut_input {
@@ -177,7 +195,7 @@
   .checkout_leftContainer {
     padding-left: 2rem;
     padding-right: 2rem;
-  box-shadow: 0px 0px 0.25rem 0.25rem #00000014;
+  box-shadow: 0px 0px 0.25rem 0.25rem #00804f21;
 
   }
 }
@@ -192,16 +210,13 @@
   width: 100%;
   display: flex;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  padding: 1rem 0rem;
+}
+.checkout_item:last-child{
+  border: none !important;
+  margin-bottom: 1rem;
 }
 
-@media (min-width: 768px) {
-  .checkout_item {
-    padding-top: 2rem;
-    padding-bottom: 1.25rem;
-  }
-}
 
 .checkout_imgWrapper {
   width: 30%;
@@ -209,39 +224,33 @@
 
 @media (min-width: 768px) {
   .checkout_imgWrapper {
-    width: 15%;
+    width: 20%;
   }
 }
 
 .checkout_productImg {
-  aspect-ratio: 4 / 5;
-  border-radius: 4px;
+  aspect-ratio: 3/4;
   object-fit: cover;
   width: 100%;
-  height: auto;
 }
 
 .checkout_details {
-  width: 85%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-left: 1.25rem;
-}
-
-@media (min-width: 768px) {
-  .checkout_details {
-    padding-left: 2.5rem;
-  }
+  padding-left: 1rem;
 }
 
 .checkout_topRow {
   display: flex;
   justify-content: space-between;
 }
-
+.checkout_productName{
+  margin-bottom: .5rem;
+}
 .checkout_metaText {
-  color: #6b7280;
+  opacity: .8;
 }
 
 .checkout_bottomRow {
@@ -276,7 +285,7 @@
 
 @media (min-width: 768px) {
   .checkout_summaryContainer {
-    width: 33%;
+    width: 40%;
   }
 }
 
@@ -284,21 +293,19 @@
   position: relative;
   width: 100%;
   background: #fff;
-  border-radius: 0.5rem;
+  /* border-radius: 0.5rem; */
   /* padding: 1rem; */
-    padding-bottom: 2rem;
   }
   
   @media (min-width: 768px) {
     .checkout_summaryWrapper {
       padding: 2rem;
-      padding-bottom: 3rem;
     }
   }
   
   @media (min-width: 768px) {
     .checkout_summaryWrapper {
-    box-shadow: 0px 0px 0.25rem 0.25rem #00000014;
+    box-shadow: 0px 0px 0.25rem 0.25rem #00804f21;
     position: sticky;
     top: 13rem;
   }
@@ -340,7 +347,7 @@
 }
 
 .checkout_textSm {
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
 .checkout_paymentImg {
@@ -366,11 +373,7 @@
 
 .checkout_btn {
   width: 100%;
-  height: 2.5rem;
-  border-radius: 4px;
-  background: #313131;
-  margin-top: 2.5rem;
-  color: #fff;
+  margin-top: 1rem;
 }
 
 .status_section {
